CHANGELOG

== Jan 29, 2012
* Added Keyword field for searching related articles
* Added word count to Headline and Abstract

== Jan 28, 2012
* Added link to search for external author
* Better CSS for tinyMCE text editor
* Enforced SSL for "EVERY PAGE"
* Added "Related Items" to the bottom of the article.
  An algorithm that uses tags to find related items based the body or title.

== Jan 27, 2012
* Added IntenseDebate commenting system

== Jan 26, 2012
* Added /feed page with description of all feeds
* Added +1 google plus dynamic share

== Jan 25, 2012
* Added TimePicker
* Improved Timezone for users and article submissions
* CSS improvements on desktop and mobile site

== Jan 24, 2012
* Added static html Pages (/admin/pages)

== Jan 22, 2012
* 100% Valid ATOM and RSS feeds

== Jan 21, 2012
* All Items RSS Feeds - /rss or /atom
* Languages RSS - /languages/english/items.rss
* Tags RSS - /tags/war.rss
* Categories RSS - /categories/politics.rss
* Authors RSS - /authors/2.rss
* Authors Page - /authors/2
* Big icons on left for RSS and Social Media
* Added RSS on /tags/ page for each tag

== Jan 20, 2012
* Improved Twitter share, cut title + URL to fit on 140 chars
  no matter how long title, twitter share will always work
* Improved Facebook share
* Improved Slashdot sharing

== Jan 18, 2012
* Share item icons/links for social media

== Jan 17, 2012
* Bigger Fonts on Admin interface

== Jan 16, 2012
* Added all social Icons for item
* Showing 3 items on Latest NEws
* Showing 1 Item on highlights 
* better box size for highlights

== Jan 12, 2012
* Site Searching with SOLR

== Jan 11, 2012 
* Languages Menu
* Added Languages Pages /languages/english
* added languages to breadcrumbs